Implemented D3 in external JS file

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <title>K-Means Visualisation</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    
-
+    <script src="test.js" defer> </script>
 </head>
 <body>
     <div id="title-bar">
         <h1 class="title">K-Means Viusaliser</h1>
     </div>
-</script>
+    <svg></svg>
 </body>
 </html>
