--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div id="title-bar">
         <h1 class="title">K-Means Viusaliser</h1>
     </div>
-    <svg></svg>
+    <div id="my_dataviz"></div>
 </body>
 </html>
