--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
     <head>
@@ -20,6 +20,7 @@
 
 					<section>
 
+					
 						<div class ="input">
 
 						<fieldset>
