--- a/index.html
+++ b/index.html
@@ -53,14 +53,22 @@
 							<svg></svg>
 							</div>
 						</div> 
+						<!-- 
+						<div id="tutorial">
+						<h3>K Means Clustering Algorithm Visualisation </h3>
+						<h6>This short tutorial will walk you through all of the features of this application.</h6>
+						<p>If you want to dive right in, feel free to press the "Skip Tutorial" button below. Otherwise, press "Next"!</p>
+						<button id="nextButton" type="button">Next</button>
+						<button id="previousButton" type="button">Previous</button>
+						<button id="skipButton" type="button">Skip Tutorial</button>
+						</div>-->
 
 					<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js" charset="utf-8"></script>
 					<script src="k-means.js"></script>
-					
+
 				</div>
 			</article>
 		</div>
-	</div>
 	</div>
 
 	<div id = "information">
