Added sticky header
A little bit jagged and can do with some optimisation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 </head>
 <body class="en">
-<div class = "header">
+<div class = "header" id="myHeader">
 	<header>
 		<h1 class="title"> K-Means Clustering Algorithm </h1>
 		</br>
