--- a/index.html
+++ b/index.html
@@ -153,28 +153,29 @@
 	</tr>
 	<tr>
 		<td>Adapts to new examples. </td>
-		<td>Clustering outliers may lead to them getting their own cluster instead of it being ignored. </td>
+		<td>Clustering outliers may lead to them getting <br> their own cluster instead of it being ignored. </td>
 	</tr>
 	<tr>
-		<td>Generalizes clusters of different shapes and sizes. </td>
-		<td>Clustering data of varying sizes and density can cause issues. </td>
+		<td>Generalizes clusters of different shapes <br> and sizes. </td>
+		<td>Clustering data of varying sizes and density can <br> cause issues. </td>
 	</tr>
 	</table>
 	</div>
 	</div>
 	<div class ="images"> 
 	<img class ="elbowMethod" src="images/elbowMethod.png" alt="elbow method">
-	<img class ="stages" src="images/stages.png" alt="stages">
+	<img class ="stages1-5" src="images/stages1-5.png" alt="stages">
 	</div> 
 
 	<div id="tutorial">
-      <h3>K Means Clustering Algorithm Visualisation</h3>
+      <h2>K Means Clustering Algorithm Visualisation</h2>
       <h6>This short tutorial will walk you through all of the features of this application.</h6>
       <p>If you want to dive right in, feel free to press the "Skip Tutorial" button below. Otherwise, press "Next"!</p>
-  
-      <button id="nextButton" type="button">Next</button>
-      <button id="previousButton" type="button">Previous</button>
-      <button id="skipButton" type="button">Skip Tutorial</button>
-    </div>
+		<div id="tbuttons">
+		<button id="nextButton" type="button">Next</button>
+		<button id="previousButton" type="button">Previous</button>
+		<button id="skipButton" type="button">Skip Tutorial</button>
+		</div>
+	</div> 
 </body>
 </html>
